focus nav bar, center content

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
     }
   </style>
 </head>
-<body>
+<body align="center">
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
@@ -62,6 +62,18 @@
     </div>
   </div>
 </nav>
+
+<style>
+p {
+    margin: 5px;
+}
+</style>
+
+<div class="content" align="center">
+<h3>Contact Me</h3>
+<p>Phone: (303) 396-7916</p>
+<p>Email: <a href="mailto:alexspatel@gmail.com" target="_top">alexspatel@gmail.com</a></p>
+</div>
 </body>
 </html>
   
